[package]
name = "robius-file-dialog"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1.0.0"
gtk4 = { version = "0.9.4", features = ["v4_4"] } # temporary

[features]
default = [
    "accessibility",
    "gtk4_10",
]

gtk4_10 = ["gtk4/v4_10"]


[target.'cfg(target_vendor = "apple")'.dependencies.objc2]
version = "0.5.2"

[target.'cfg(target_vendor = "apple")'.dependencies.objc2-foundation]
version = "0.2.2"
features = [
    "NSArray",
    "NSError",
    "NSObject",
    "NSString",
    "NSURL",
]

[target.'cfg(target_os = "macos")'.dependencies.objc2-app-kit]
version = "0.2.2"
features = [
    "NSOpenPanel",
    "NSPanel",
    "NSResponder",
    "NSSavePanel",
    "NSWindow",
]

[target.'cfg(windows)'.dependencies.windows]
version = "0.58.0"
features = [] # TODO
